--- a/Areas/HumanResource/Views/Deductions/_DeductionSlabSetup.cshtml
+++ b/Areas/HumanResource/Views/Deductions/_DeductionSlabSetup.cshtml
@@ -18,10 +18,7 @@
                 <tr>
                     <td>@item.Deduction</td>
                     <td>
-                        <a href="/HumanResource/SlabCategories/index?SlabID=@item.SlabID">@item.Status</a>
-                    </td>
-                    <td>
-                        <a href="">Create Slab</a>
+                        <a href="/HumanResource/SlabDetails/Create?SlabID=@item.SlabID">Create Slab</a>
                     </td>
                 </tr>
             }
