--- a/Areas/HumanResource/Views/LeaveApplications/Delete.cshtml
+++ b/Areas/HumanResource/Views/LeaveApplications/Delete.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete Leave Request?</h5>
 <div>
     <h4>LeaveApplication</h4>
     <hr />
