--- a/Areas/HumanResource/Views/Statutories/Index.cshtml
+++ b/Areas/HumanResource/Views/Statutories/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model List<Standus_5_0.Areas.HumanResource.Models.Statutory>
 
 
-<table class="table">
+<table class="table table-bordered table-striped">
     <thead>
-        <tr>
+        <tr class="table-success">
             <th>
                 Type
             </th>
