--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -54,7 +54,7 @@ a {
 }
 .form-container {
     margin: 0 auto 0 auto;
-    border: 1px solid #808080;
+    //border: 1px solid #808080;
     width:60%;
     /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
     /*padding:15px;*/
