--- a/Areas/HumanResource/Views/BankDetails/Create.cshtml
+++ b/Areas/HumanResource/Views/BankDetails/Create.cshtml
@@ -2,44 +2,67 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>BankDetails</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>         
-            <input asp-for="EmployeeID" class="form-control" type="hidden" value="@ViewData["EmployeeId"]"/>
-            <div class="form-group">
-                <label asp-for="BankName" class="control-label"></label>
-                <input asp-for="BankName" class="form-control" />
-                <span asp-validation-for="BankName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AccountNo" class="control-label"></label>
-                <input asp-for="AccountNo" class="form-control" />
-                <span asp-validation-for="AccountNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IFSCCode" class="control-label"></label>
-                <input asp-for="IFSCCode" class="form-control" />
-                <span asp-validation-for="IFSCCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input asp-for="Name" class="form-control" type="hidden" asp-value/>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@ViewBag.Alert)
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<h5>Add Bank Details</h5>
+<hr />
+
+<form asp-action="Create">
+    <div style="display:flex;flex-direction:row;">
+        <div class="staff-menu">
+            <partial name="../_StaffMenu" />
+        </div>
+        <div class="col-md-4 form-container">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>         
+            <input asp-for="EmployeeID" class="form-control" type="hidden" value="@ViewData["EmployeeId"]"/>
+            <div class="form-group">
+                <label asp-for="BankName" class="control-label">Bank Name</label>
+                <input asp-for="BankName" class="form-control"/>
+                <span asp-validation-for="BankName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AccountNo" class="control-label">Account #</label>
+                <input asp-for="AccountNo" class="form-control"/>
+                <span asp-validation-for="AccountNo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IFSCCode" class="control-label">IFSC Code</label>
+                <input asp-for="IFSCCode" class="form-control"/>
+                <span asp-validation-for="IFSCCode" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input asp-for="Name" class="form-control" type="hidden"/>
+            </div>
+            <br>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" /> |
+                <a href="/Humanresource/Employees/Index">Back to List</a>
+            </div>
+
+            <br>
+            <div id="bank_details">
+            </div>
+    </div>
 </div>
 
+        </form>
+
+<script>
+    $.ajax({
+        url:'/Humanresource/Bankdetails/Index',
+        type: 'GET',
+        data: { id: @ViewBag.EmployeeId},
+        success : function(result){
+            $("#bank_details").html(result);
+        }
+    });
+</script>
