--- a/Areas/HumanResource/Views/Educations/Create.cshtml
+++ b/Areas/HumanResource/Views/Educations/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row">
@@ -13,31 +13,45 @@
     </div>
 </div>
 
+<h5>Add Education</h5>
+<hr/>
 <div style="display:flex;flex-direction:row;">
     <div class="staff-menu">
         <partial name="../_StaffMenu" />
     </div>
     <div class="col-md-4 form-container">
-        <div class="form-header">
-            <h5>Add Education</h5>
-        </div>
-        <div class="form-body">
+        
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <Input asp-for="EmployeeID" class ="form-control" asp-items="@ViewData["EmployeeID"]" type="hidden"/>
+            <Input name="EmployeeID" class ="form-control" value="@ViewData["EmployeeID"]" type="hidden"/>
             <div class="form-group">
-                <label asp-for="EducationType" class="control-label"></label>
+                <label asp-for="EducationType" class="control-label">Education Type</label>
                 @* <select asp-for="EducationType" class="form-control" asp-items="ViewBag.EducationType"></select> *@
                     <Input asp-for="EducationType" class="form-control" asp-items="@ViewData["EducationType"]" />
                 <span asp-validation-for="EducationType" class="text-danger"></span>
-            </div>            
+            </div>         
+            <br>
+
+                <div class="form-group form-footer">
+                    <input type="submit" value="Create" class="btn btn-primary" /> | 
+                    <a href="/Humanresource/Employees/Index">Back to List</a>
+                </div>
         </form>
-        </div>
-        <div class="form-group form-footer">
-            <input type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index">Back to List</a>
+        <br>
+        <div id="education">
         </div>
     </div>
 </div>
+<script>
+    $.ajax({
+        url: '/Humanresource/Educations/Index',
+        type: 'GET',
+        data: { id: @ViewBag.EmployeeId},
+        success: function (result) {
+            $("#education").html(result);
+        }
+    });
+</script>
+
 
 
