--- a/Areas/HumanResource/Views/Employees/Create.cshtml
+++ b/Areas/HumanResource/Views/Employees/Create.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
+    ViewData["mode"] ="Create" ;
 }
 
 <div class="row">
@@ -13,67 +14,84 @@
     </div>
 </div>
 
-<div style="display:flex;flex-direction:row;">
-    
+<h5>Employee Details</h5>
+<hr/>
+<form asp-action="Create">
+<div style="display:flex;flex-direction:row;">    
     <div class="data-flow">
         <partial name="../_StaffMenu" />        
     </div>
-    <div class="col-md-4 form-container">
-            <div class="form-header">
-                <h5>Add New Staff</h5>
+    <div class="col-md-4 form-container">            
+         <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label asp-for="Name" class="control-label">Name</label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                <div class="form-group col-md-6">
+                        <label asp-for="Email" class="control-label">Email</label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+        <div class="row">
+               <div class="form-group col-md-6">
+                        <label asp-for="Phone" class="control-label">Phone</label>
+                        <input asp-for="Phone" class="form-control" />
+                        <span asp-validation-for="Phone" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label asp-for="Address" class="control-label">Address</label>
+                        <input asp-for="Address" class="form-control" />
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+        </div>
+        <div class="row">
+             <div class="form-group col-md-6">
+                 <label asp-for="DateOfBirth" class="control-label">Date Of Birth</label>
+                 <input asp-for="DateOfBirth" class="form-control" />
+                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+             </div>
+             <div class="form-group col-md-6">
+                  <label asp-for="HireDate" class="control-label">Hire Date</label>
+                  <input asp-for="HireDate" class="form-control" />
+                  <span asp-validation-for="HireDate" class="text-danger"></span>
+             </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-md-6">
+                 <label asp-for="Salary" class="control-label">Salary</label>
+                 <input asp-for="Salary" class="form-control" />
+                 <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
-            <div class="form-body">
-            <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Phone" class="control-label"></label>
-                    <input asp-for="Phone" class="form-control" />
-                    <span asp-validation-for="Phone" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Address" class="control-label"></label>
-                    <input asp-for="Address" class="form-control" />
-                    <span asp-validation-for="Address" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="DateOfBirth" class="control-label"></label>
-                    <input asp-for="DateOfBirth" class="form-control" />
-                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="HireDate" class="control-label"></label>
-                    <input asp-for="HireDate" class="form-control" />
-                    <span asp-validation-for="HireDate" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Salary" class="control-label"></label>
-                    <input asp-for="Salary" class="form-control" />
-                    <span asp-validation-for="Salary" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="DepartmentID" class="control-label"></label>
-                    <input asp-for="DepartmentID" class="form-control" />
-                    <span asp-validation-for="DepartmentID" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PositionID" class="control-label"></label>
-                    <select asp-for="PositionID" class ="form-control" asp-items="ViewBag.PositionID"></select>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                    <a asp-action="Index">Back to List</a>
-                </div>
-            </form>
+            <div class="form-group col-md-6">
+                  <label asp-for="DepartmentID" class="control-label">Department</label>
+                  <select asp-for="DepartmentID" class="form-control" asp-items="ViewBag.DepartmentID"></select>
+                  <span asp-validation-for="DepartmentID" class="text-danger"></span>
             </div>
+        </div>
+        <div class="row">
+             <div class="form-group col-md-6">
+                  <label asp-for="PositionID" class="control-label">Postition</label>
+                  <select asp-for="PositionID" class ="form-control" asp-items="ViewBag.PositionID"></select>
+             </div>
+        </div>
+        <br>
+        <div class="form-group">
+             <input type="submit" value="Create" class="btn btn-primary" /> |
+             <a asp-action="Index">Back to List</a>
+        </div>            
     </div>
 </div>
+</form>
+<script>
+
+    let currentDate = new Date().toISOString().split('T')[0];
+    $("#HireDate").val(currentDate);
+
+    dob = new Date().toISOString().split('T')[0];
+    dob.setDate(currentDate.getDate() - 6576);
+    $("DateOfBirth").val(dob);
+
+</script>
