--- a/Areas/HumanResource/Views/LeaveApplications/Details.cshtml
+++ b/Areas/HumanResource/Views/LeaveApplications/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>leave Request Details</h1>
 
 <div>
     <h4>LeaveApplication</h4>
