--- a/Areas/HumanResource/Views/LeaveApplications/Edit.cshtml
+++ b/Areas/HumanResource/Views/LeaveApplications/Edit.cshtml
@@ -5,10 +5,17 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@TempData["Alert"])
+        </div>
+    </div>
+</div>
 
-<h4>LeaveApplication</h4>
+<h5>Edit Leave Request</h5>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
