--- a/Areas/HumanResource/Views/SlabDetails/Create.cshtml
+++ b/Areas/HumanResource/Views/SlabDetails/Create.cshtml
@@ -5,56 +5,81 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>SlabDetails</h4>
+<h5>Slab Details</h5>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form asp-action="Create">
+<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input asp-for="SlabID" class="form-control" type=hidden />
+    <input type="hidden" asp-for="CategoryID" class="form-control" >
+<div class="row">                
+        <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="SlabID" class="control-label"></label>
-                <input asp-for="SlabID" class="form-control" />
-                <span asp-validation-for="SlabID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FromAmount" class="control-label"></label>
+                <label asp-for="FromAmount" class="control-label">From Amount</label>
                 <input asp-for="FromAmount" class="form-control" />
                 <span asp-validation-for="FromAmount" class="text-danger"></span>
             </div>
+            </div>
+        <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="ToAmount" class="control-label"></label>
+                <label asp-for="ToAmount" class="control-label">To Amount</label>
                 <input asp-for="ToAmount" class="form-control" />
                 <span asp-validation-for="ToAmount" class="text-danger"></span>
             </div>
+            </div>
+        <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
+                <label asp-for="Type" class="control-label">Type</label>
                 <input asp-for="Type" class="form-control" />
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
+            </div>
+    </div>
+    <div class="row align-items-lg-center">
+        <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="Employee" class="control-label"></label>
+                <label asp-for="Employee" class="control-label">Employee</label>
                 <input asp-for="Employee" class="form-control" />
                 <span asp-validation-for="Employee" class="text-danger"></span>
             </div>
+        </div>
+
+        <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="Employer" class="control-label"></label>
+                <label asp-for="Employer" class="control-label">Employer</label>
                 <input asp-for="Employer" class="form-control" />
                 <span asp-validation-for="Employer" class="text-danger"></span>
             </div>
+        </div>
+        
+        <div class="col-md-4">
             <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
-                <select asp-for="CategoryID" class ="form-control" asp-items="ViewBag.CategoryID"></select>
+                <label class="control-label"></label>
+                <input type="submit" value="Create" class="btn btn-primary" /> |
+                <a href="/humanresource/slabcategories/create?id=@ViewBag.AllowanceID">Back to List</a>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+        </div>
+</div>
+</form>
+
+<br>
+<div id="slabdetails">
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '@Url.Action("index", "SlabDetails")',  // Ensure this is the correct URL for your action
+            type: 'GET',
+            data: {
+                slabid: @ViewBag.SlabID, categoryid: @ViewBag.CategoryID
+            },
+            success: function (result) {
+                $('#slabdetails').html(result);
+            },
+            error: function (xhr, status, error) {
+                console.error("AJAX Error: " + error);
+            }
+        });
+    });
 
+</script> 
