--- a/Areas/HumanResource/Views/Statutories/Create.cshtml
+++ b/Areas/HumanResource/Views/Statutories/Create.cshtml
@@ -2,21 +2,29 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Statutory</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@ViewBag.Alert)
+        </div>
+    </div>
+</div>
+
+<h5>Add Statutory Details</h5>
+<hr />
+<div style="display:flex;flex-direction:row;">
+    <div class="staff-menu">
+        <partial name="../_StaffMenu" />
+    </div>
+    <div class="col-md-4 form-container">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="EmployeeID" class="control-label"></label>
-                <input asp-for="EmployeeID" class ="form-control" asp-items="@ViewData["EmployeeID"]" type="hidden"/>
-            </div>
+            
+            <input name="EmployeeID" value="@ViewData["EmployeeID"]" type="hidden"/>
+            
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
                 <input asp-for="Type" class="form-control" />
@@ -27,22 +35,26 @@
                 <input asp-for="Details" class="form-control" />
                 <span asp-validation-for="Details" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" /> |
+                <a href="/Humanresource/Employees/Index">Back to List</a>
+            </div>
+            <br>
+            <div id="statutory">
             </div>
         </form>
     </div>
 </div>
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
-@* <div>
-    @{        
-        // var applicationDbContext = _context.Statutory.Include(s => s.Employee);
-        // return View(await applicationDbContext.ToListAsync());
-        // Html.RenderPartial("YourPartialView", Model.PartOfTheModel);
-    }
 
-    <partial name="_List">
-</div> *@
+<script>
+    $.ajax({
+        url: '/Humanresource/Statutories/Index',
+        type: 'GET',
+        data: { id: @ViewData["EmployeeID"]},
+        success: function (result) {
+            $("#statutory").html(result);
+        }
+    });
+</script>
